# chatDAL

./: .gitignore  pyproject.toml
app/: main.py
app/chat_domain/: chat.py
app/config/: logging.py  mongo.py
app/service/: chatgpt.py  secret.py
